--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".Activity.LoginActivity">
 
     <ImageView
@@ -138,42 +139,38 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvQuenMK"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.007" />
+
+
 
     <TextView
         android:id="@+id/tvKhongTK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="192dp"
         android:text="@string/kh_ng_c_t_i_kho_n"
-        android:textColor="@color/black"
 
+        android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/cvGoogle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/tvTextDangky"
-        app:layout_constraintTop_toBottomOf="@id/tvDangNhap"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/tvDangNhap"
+        app:layout_constraintTop_toBottomOf="@id/tvDangNhap" />
 
     <TextView
         android:id="@+id/tvTextDangky"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="15dp"
         android:text="@string/ng_k"
         android:textColor="#B43838"
-
-
+        android:layout_marginTop="15dp"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/tvDangNhap"
+        app:layout_constraintHorizontal_bias="0.012"
         app:layout_constraintStart_toEndOf="@+id/tvKhongTK"
-        app:layout_constraintTop_toBottomOf="@id/tvDangNhap" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDangNhap" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvGoogle"
@@ -211,13 +208,11 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:text="@string/g_oo"
                 android:textColor="@color/black"
                 android:textSize="14sp"
+                android:layout_marginLeft="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.318"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.444" />
@@ -246,15 +241,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/ctlFacebook">
-            <TextView
+
+             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fa_ce"
                 android:textColor="@color/black"
                 android:textSize="14sp"
+                 android:layout_marginLeft="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.333"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent" />
 
