--- a/app/src/main/res/layout/activity_hello_screen.xml
+++ b/app/src/main/res/layout/activity_hello_screen.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/linear"
+    android:background="@color/white"
     tools:context=".Activity.HelloScreenActivity">
 
     <ImageView
