--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="5dp"
+        android:layout_height="13dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/ic_back"
 
         app:layout_constraintStart_toStartOf="parent"
