--- a/app/src/main/res/layout/activity_doi_pass.xml
+++ b/app/src/main/res/layout/activity_doi_pass.xml
@@ -37,7 +37,7 @@
 
         <ImageView
             android:id="@+id/imageView17"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
