--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -149,7 +149,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
-            android:background="#f2f2f2"
+
             android:id="@+id/cl_contact"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -195,7 +195,7 @@
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -206,7 +206,7 @@
             android:id="@+id/cl_policy"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#f2f2f2"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -251,7 +251,7 @@
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -259,7 +259,7 @@
             app:srcCompat="@drawable/ic_vienduoi" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="#f2f2f2"
+
             android:id="@+id/cl_setting"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -306,9 +306,8 @@
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.68"
             app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +318,7 @@
             android:id="@+id/cl_doipass"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#f2f2f2"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -363,9 +362,8 @@
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.68"
             app:layout_constraintStart_toStartOf="parent"
