--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/ic_back"
-
+        android:onClick="onClickBackSceen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,6 +93,7 @@
         android:text="@string/qu_n_m_t_kh_u"
         android:textColor="@color/black"
         android:textSize="14sp"
+        android:onClick="onClickForgotPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.633"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -133,6 +134,7 @@
         android:layout_marginTop="100dp"
         android:background="@drawable/bg_btn"
         android:gravity="center"
+        android:onClick="onClickLogin"
         android:text="@string/ng_nh_p"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -164,6 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:text="@string/ng_k"
+        android:onClick="onClickRegister"
         android:textColor="#B43838"
         android:layout_marginTop="15dp"
         android:textSize="16sp"
