--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -166,7 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:text="@string/ng_k"
-        android:onClick="onClickRegister"
+        android:onClick="onClickRegisteraccount"
         android:textColor="#B43838"
         android:layout_marginTop="15dp"
         android:textSize="16sp"
